--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     var list=document.getElementById('tasklist');
     var form=document.getElementsByTagName('button')[0];
     var todoInput=document.getElementById('todo');
-    form.addEventListener('clik',function(event){
+    form.addEventListener('click',function(event){
      event.preventDefault();  
      addToList(todoInput.value);
      todoInput.value="";
